--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ ul.socials {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 200px;
+    left: 300px;
     margin-top: 100px;
     
 
@@ -35,7 +35,7 @@ ul.socials {
 
 h1.work-heading{
     position: absolute;
-    top: 19%;
+    top: 18.5%;
     left: 1%;
     border-bottom: 3px solid black;
     font-family: 'Satisfy';
@@ -82,6 +82,7 @@ div.we {
 
 section.education {
     font-family:'Mochiy Pop One', sans-serif;
+    margin-top: 5%;
    
 }
 
@@ -115,4 +116,12 @@ img.background {
     min-height: 120%;
     margin: 0;
     z-index: -1;
+}
+
+h1.heading-ed {
+    font-family: 'Satisfy';
+    border-bottom: 3px solid black;
+    position:absolute;
+    bottom: 14.4%;
+    left: 1%;
 }
